--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,6 +29,16 @@ li button {
   cursor: pointer;
 }
 
+li.nonPriority {
+  border: 2px solid #1a681e;
+  color: #1a681e;
+}
+
+li.highPriority {
+  border: 2px solid #f2360c;
+  color: #f2360c;
+}
+
 input[type="text"] {
   padding: 10px;
   width: 50%;
